<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wGolfUWSPScore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/wGolfUWSPPic"
        tools:text="20" />

    <TextView
        android:id="@+id/wGolfOppScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/wGolfUWSPScore"
        tools:text="20" />

    <ImageView
        android:id="@+id/wGolfUWSPPic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/uwsp_team_logo"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/wGolfUWSPIndicator" />

    <ImageView
        android:id="@+id/wGolfOppPic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/opponent_team_logo"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/wGolfUWSPPic" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/wGolfTabLayout"
        android:layout_width="match_parent"
        app:tabTextAppearance="@style/TabText"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wGolfDate" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/wGolfViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wGolfTabLayout">

    </androidx.viewpager.widget.ViewPager>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/wGolfOppTeam"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/wGolfOppScore"
        app:layout_constraintStart_toStartOf="@+id/wGolfOppScore"
        app:layout_constraintTop_toTopOf="@+id/wGolfUWSPTeam"
        tools:text="Opponent Name and  Second Line Example" />

    <TextView
        android:id="@+id/wGolfUWSPTeam"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/wGolfUWSPScore"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/wGolfUWSPScore"
        app:layout_constraintTop_toBottomOf="@+id/wGolfUWSPPic"
        tools:text="UWSP" />

    <TextView
        android:id="@+id/vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/wGolfUWSPPic"
        app:layout_constraintEnd_toStartOf="@+id/wGolfOppPic"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/wGolfUWSPPic"
        app:layout_constraintTop_toTopOf="@+id/wGolfUWSPPic" />

    <TextView
        android:id="@+id/wGolfUWSPIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Home/away" />

    <TextView
        android:id="@+id/wGolfOppIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/wGolfUWSPIndicator"
        app:layout_constraintEnd_toEndOf="@+id/wGolfOppScore"
        app:layout_constraintStart_toStartOf="@+id/wGolfOppScore"
        tools:text="Home/away" />

    <TextView
        android:id="@+id/wGolfDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/wGolfOppTeam"
        tools:text="Date" />

    <TextView
        android:id="@+id/WGolfRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/recent"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>